# sdk.py

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  pr.yml  release.yml
docs/: api-reference.rst  client.rst  conf.py  index.rst  modeling.rst  overview.rst  reference.rst  specifications.rst  strategies.rst  transformations.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  opvious.data.doctree  opvious.doctree  opvious.executors.doctree  reference.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  opvious.data.html  opvious.executors.html  opvious.html  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt  opvious.data.rst.txt  opvious.executors.rst.txt  opvious.rst.txt
opvious/: __init__.py  __main__.py  attempt.py  client.py  common.py  data.py  executors.py  modeling.py  specifications.py  transform.py  transformations.py
opvious/client/: __init__.py  common.py  handlers.py  instance.py
opvious/data/: __init__.py  attempts.py  outcomes.py  outlines.py  queued_solves.py  solves.py  tensors.py
opvious/executors/: __init__.py  aiohttp.py  common.py  pyodide.py  urllib.py
opvious/model/: __init__.py  ast.py  definitions.py  fragments.py  statements.py
opvious/modeling/: __init__.py  ast.py  definitions.py  fragments.py  identifier.py  identifiers.py  image.py  images.py  lazy.py  model.py  patterns.py  quantified.py  scope.py  statements.py  tools.py
opvious/specifications/: __init__.py  common.py  external.py  local.py  notebook.py  variants.py
opvious/specifications/model/: __init__.py  ast.py  definitions.py  fragments.py  identifiers.py  images.py  statements.py
scripts/: develop  specifications.sh  version.sh
src/opvious/: __init__.py  __main__.py  client.py  common.py  data.py  jupyter.py  transformations.py
src/opvious/client/: common.py  handlers.py
src/opvious/data/: outcomes.py  queued_solves.py
src/opvious/executors/: __init__.py  aiohttp.py  common.py  pyodide.py  urllib.py
src/opvious/modeling/: ast.py  definitions.py  identifiers.py  quantified.py
src/opvious/specifications/: __init__.py  local.py
tests/: test_client.py  test_common.py  test_executors.py  test_model.py  test_modeling.py  test_specifications.py
tests/notebooks/: set-cover.ipynb
tests/opvious/: client_test.py  executors_test.py  specifications_test.py
tests/opvious/sources/: bounded.md  diet.md  sudoku.md
tests/sources/: bounded.md  group-expenses.md  unbounded.md
tests/specifications/: diet.md
