[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "opvious"
version = "0.4.7"
description = "Opvious Python SDK"
authors = ["Opvious Engineering <oss@opvious.io>"]
readme = "README.md"
repository = "https://github.com/opvious/sdk.py"
packages = [{include = "opvious"}]

[tool.poetry.dependencies]
aiohttp = {version = "^3.8", optional = true}
backoff = "^2.2"
Brotli = {version = "^1.0.9", optional = true}
humanize = "^4.4.0"
pandas = "^1.5"
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^4.0.1"
pytest = "~7.1.2"
pytest-asyncio = "^0.20.2"

[tool.poetry.extras]
aio = ["aiohttp", "Brotli"]

[tool.black]
line-length = 79
include = '\.py$'
