[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "opvious"
version = "0.17.0rc2"
description = "Opvious Python SDK"
authors = ["Opvious Engineering <oss@opvious.io>"]
readme = "README.md"
repository = "https://github.com/opvious/sdk.py"
packages = [{include = "opvious"}]

[tool.poetry.dependencies]
aiohttp = {version = "^3.8", optional = true}
backoff = "^2.2"
Brotli = {version = "^1.0.9", optional = true}
docopt = {version = "^0.6.2", optional = true}
humanize = "^4.4.0"
importnb = "^2023.1.7"
numpy = ">=1.21"
pandas = "^1.4"
python = ">=3.9,<3.12"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.10.0"}
flake8 = "^4.0.1"
mypy = "^1.2.0"
pytest = "~7.1.2"
pytest-asyncio = "^0.20.2"
pandas-stubs = "^1.5.3.230321"
types-docopt = "^0.6.11.3"

[tool.poetry.extras]
aio = ["aiohttp", "Brotli"]
cli = ["docopt"]

[tool.black]
line-length = 79
include = '\.py$'

[tool.pytest.ini_options]
log_level = 'DEBUG'
addopts = '-p no:importnb'
