[metadata]
name = opvious
version = 0.1.18
author = Opvious engineering
author_email = eng@opvious.ai
description = Opvious Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/opvious/sdk.py
project_urls =
  Bug Tracker = https://github.com/opvious/sdk.py
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.6
install_requires =
  pandas

[options.packages.find]
where = src

[options.extras_require]
aio =
  aiohttp
test =
  pytest-asyncio
